# elm-interface

./: .gitignore  README.md  elm-interface-gen.cabal  elm-interface.cabal
.github/workflows/: ci.yaml
src/: Commentable.hs  Constructor.hs  Deriving.hs  Lib.hs  Render.hs  S.hs  Type.hs
