cabal-version: 3.0

author: Mitchell Rosen
bug-reports: https://github.com/mitchellwrosen/elm-interface-gen/issues
category: Concurrency
copyright: Copyright (C) 2020 Mitchell Rosen
description: Elm and Haskell type generation.
homepage: https://github.com/mitchellwrosen/elm-interface-gen
license: BSD-3-Clause
license-file: LICENSE
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
name: elm-interface-gen
stability: experimental
synopsis: Elm and Haskell type generation
version: 0

extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/mitchellwrosen/elm-interface-gen

common component
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    ConstraintKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    ExistentialQuantification
    GeneralizedNewtypeDeriving
    ImplicitParams
    LambdaCase
    NamedFieldPuns
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

library
  import: component
  build-depends:
    base,
  exposed-modules:
    Lib
  hs-source-dirs: src
